# TheMississagaBoogeymen

./: .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  Badges.md  CLAUDE.md  DEPLOY.md  EASHL Team Stats Website – Full Blueprint.md  HANDOFF.md  README.md  card-design-and-progression-blueprint.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.claude/: settings.json
docs/: ARCHITECTURE.md  DB-ROADMAP.md  MANAGER-WORKFLOW.md  PLAN.md  (+7 more)
tools/game_ocr/: README.md  pyproject.toml
tools/game_ocr/game_ocr/: __init__.py  cli.py  config.py  extractor.py  image.py  models.py  ocr.py  parsers.py  spatial.py  utils.py
tools/game_ocr/game_ocr/configs/rink/: match250_landmarks.json  post_game_action_tracker.json
tools/game_ocr/game_ocr/configs/roi/: player_loadout_view.yaml  post_game_action_tracker.yaml  post_game_box_score_faceoffs.yaml  post_game_box_score_goals.yaml  post_game_box_score_shots.yaml  post_game_events.yaml  post_game_faceoff_map.yaml  post_game_net_chart.yaml  post_game_player_summary.yaml  pre_game_lobby_state_1.yaml  pre_game_lobby_state_2.yaml
tools/game_ocr/scripts/: benchmark_side_by_side.py  benchmark_vs_truth.py  calibrate_rink.py  calibration_spike.py  calibration_spike_v2.py  dump_raw_ocr.py  import_cvat_labels.py  inventory_consensus_match.py  recalibrate_rink.py  respatialize_match.py  validate_loadout_v2.py  validate_shape_classifier.py  verify_rink_calibration.py  xfactor_tier_spike.py
tools/game_ocr/tests/: test_cli_smoke.py  test_parsers.py  test_spatial.py
(+301 files in other folders)
